# ghost-investor-ai

./: .env.example  .gitignore  API_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_TESTING_README.txt  IMPLEMENTATION_STATUS.md  Makefile  PHASE1_COMPLETE.md  PHASE1_EXAMPLES.py  PHASE1_STARTUP.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY_CONFIG_GUIDE.sh  SERVICES_READY.txt  START_SERVICES.sh  STATUS_REPORT.txt  TESTING_GUIDE.md  TESTING_SUMMARY.md  TESTING_WORKFLOW.md  TEST_END_TO_END.py  TEST_MANUAL_STEPS.sh  cli.py  docker-compose.yml  examples.py  pyproject.toml  requirements.txt  tests.py
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial.py  __init__.py
src/ghost_investor_ai/: __init__.py  auth.py  config.py  database.py  main.py  models.py  rate_limiting.py
src/ghost_investor_ai/api/: __init__.py  routes_activities.py  routes_analytics.py  routes_auth.py  routes_batch.py  routes_campaigns.py  routes_email_accounts.py  routes_enrichment.py  routes_leads.py  routes_webhooks.py  schemas.py
src/ghost_investor_ai/integrations/: __init__.py  crm_sync.py  email_gmail.py  email_outlook.py  email_service.py
src/ghost_investor_ai/services/: __init__.py  activity_logging.py  ai_email_generation.py  analytics.py  batch_jobs.py  email_drafting.py  enrichment.py  outreach_sequence.py  reply_parsing.py  scoring.py  webhooks.py
